--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,9 +24,11 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
-    "Topic :: Software Development :: Debugging",
+    "Topic :: Software Development",
+    "Topic :: Software Development :: Libraries",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: System :: Logging",
+    "Topic :: Utilities",
 ]
 dependencies = []
 requires-python = ">=3.7"
